# cpufreqd

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  README  TODO  config.h.in  configure.in  cpufreqd.conf  prepare.sh
debian/: NEWS.Debian  README.Debian  changelog  config  control  copyright  cpufreqd.conf  cpufreqd.default  cpufreqd.init  docs  postinst  postrm  prerm  rules  templates
debian/patches/: 01_acpitz_support.patch  02_fix_segfault_reading_class_devices.patch  03_two_batteries_segfault_fix.patch  series
debian/po/: cs.po  da.po  de.po  es.po  eu.po  fr.po  he.po  hu.po  it.po  ja.po  ko.po  lt.po  nl.po  pt.po  ro.po  sv.po  templates.pot  vi.po
manpages/: .cvsignore  Makefile.am  configure.in  cpufreqd-get.1  cpufreqd-set.1  cpufreqd.8  cpufreqd.8.in  cpufreqd.conf.5
src/: .cvsignore  Makefile.am  Makefile.in  config.h.in  config_parser.c  config_parser.h  configure.in  cpufreq_utils.c  cpufreq_utils.h  cpufreqd.conf  cpufreqd.h  cpufreqd_acpi.c  cpufreqd_acpi.h  cpufreqd_acpi_ac.c  cpufreqd_acpi_ac.h  cpufreqd_acpi_battery.c  cpufreqd_acpi_battery.h  cpufreqd_acpi_event.c  cpufreqd_acpi_event.h  cpufreqd_acpi_temperature.c  cpufreqd_acpi_temperature.h  cpufreqd_apm.c  cpufreqd_cpu.c  cpufreqd_exec.c  cpufreqd_governor_parameters.c  cpufreqd_log.c  cpufreqd_log.h  cpufreqd_nforce2.c  cpufreqd_nvclock.c  cpufreqd_plugin.h  cpufreqd_pmu.c  cpufreqd_programs.c  cpufreqd_remote.h  cpufreqd_sensors.c  cpufreqd_tau.c  daemon_utils.c  daemon_utils.h  list.c  list.h  main.c  (+5 more)
tests/: Makefile.am  test_config_parser.c
utils/: .cvsignore  Makefile.am  configure.in  getspeed.c  setspeed.c
