# Process this file with autoconf to produce a configure script.
AC_INIT([cpufreqd],[2.0.0-pre1],[malattia@linux.it], [cpufreqd])
AC_CANONICAL_TARGET([])

AM_INIT_AUTOMAKE(1.6 dist-bzip2 foreign)

CPUFREQD_CONFDIR="$sysconfdir"
eval CPUFREQD_CONF_DIR="$CPUFREQD_CONFDIR"
AC_DEFINE_UNQUOTED(CPUFREQD_CONFDIR,"$CPUFREQD_CONFPATH",[Define this to configuration dir location])
AC_SUBST(CPUFREQD_CONF_DIR)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT([cpufreqd.8])

